--- a/src/app/PageTours/css/PageTours.module.css
+++ b/src/app/PageTours/css/PageTours.module.css
@@ -1,17 +1,17 @@
 .container {
     display: flex;
-    margin: 40px 20px 50px 20px;
+    /* margin: 20px 20px 50px 20px; */
     flex-direction: column;
     text-align: center;
 }
 
 .container p{
-    margin: 10px 0 10px 0;
+    margin: 0 10px;
 }
 
 .containertour {
     display: flex;
-    margin: 40px 0 40px 0;
+    margin: 40px 15px 40px 15px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -19,6 +19,22 @@
     background: white;
     padding: 10px;
     border-radius: 15px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
     background-color: white;
 }
+
+.search{
+    display: flex;
+    margin: 10px 0 10px 0;
+    justify-content: center;
+    align-items: center;
+}
+
+.h {
+    width: 100%;
+    height: 2px;
+    background-color: #678F4E;
+    border: none;
+    margin-bottom: 20px;
+  }
+  
