--- a/src/app/PageTourIndividual/css/PageTourIndividual.module.css
+++ b/src/app/PageTourIndividual/css/PageTourIndividual.module.css
@@ -29,16 +29,35 @@
 .tourDays {
   display: flex;
   flex-direction: column;
-  margin: 20px 60px 40px 60px;
+  margin: 20px 60px 0 60px;
 }
 
 .daySection {
   margin-bottom: 20px;
 }
 
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #678F4E;
+  color: #F5F5DC;
+  border-radius: 12px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  white-space: nowrap;
+  border: 3px solid #678F4E;
+  font-size: 16px;
+  padding: 10px;
+  margin: 20px auto;
+  width: 300px;
+}
+
 @media (max-width: 1450px) {
   .tourDays {
-    margin: 20px 30px 20px 30px;
+    margin: 20px 30px 0 30px;
   }
 }
 
@@ -67,13 +86,13 @@
 
 @media (max-width: 1200px) {
   .tourDays {
-    margin: 10px 15px 10px 15px;
+    margin: 10px 15px 0 15px;
   }
 }
 
 @media (max-width: 700px) {
   .tourDays {
-    margin: 10px 10px 10px 10px;
+    margin: 10px 10px 0 10px;
   }
 
   .imageGallery {
@@ -101,7 +120,7 @@
 
 @media (max-width: 420px) {
   .tourDays {
-    margin: 10px 5px 10px 5px;
+    margin: 10px 5px 0 5px;
   }
 
   .mapImage {
