--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,6 +90,7 @@
 
 body {
   color: var(--foreground);
+  /* background: #F5F5DC; */
   background: #F5F5DC;
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
