--- a/src/app/PageDreams/css/PageDreams.module.css
+++ b/src/app/PageDreams/css/PageDreams.module.css
@@ -1,85 +1,148 @@
 .containerDreams {
-    display: flex; /* Включаем Flexbox */
-    flex-direction: column; /* Колонки */
+  display: flex;
+  flex-direction: column;
 }
 
 .containerDreams h3 {
-  font-size: 24px;
+  font-size: 26px;
   font-weight: bold;
   color: #678F4E;
   text-align: center;
   margin: 30px 0;
 }
 
-.containerDreams p {
-  font-size: 16px;
+.containerDreamsP {
+  font-size: 18px;
   align-items: left;
-  margin: 0 20px 0 20px;
+  margin: 0 20px 30px 20px;
 }
 
 .container {
-    display: flex; 
-    flex-wrap: wrap; 
-    gap: 20px; 
-    justify-content: center; 
-    margin: 20px 0;
-    margin-top: auto;
-  }
-
-.container h4{
-    font-size: 24px;
-    font-weight: bold;
-    color: #678F4E;
-    text-align: center;
-    margin: 0 0 10px 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  margin: 20px 0;
+  margin-top: auto;
 }
 
-.containerCountry {
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 20px;
-    margin: 20px 0;
-    background-color: #f9f9f9;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    width: 300px;
-    min-height: 500px; /* Минимальная высота для одинакового уровня кнопок */
-    display: flex;
-    flex-direction: column; /* Вертикальное выравнивание */
-  }
+.cardBack h4 {
+  font-size: 24px;
+  font-weight: bold;
+  color: #678F4E;
+  text-align: center;
+  margin: 0 0 10px 0;
+}
 
-  .containerCountry img {
-    display: block;
-    border-radius: 12px;
-    margin-bottom: 10px;
-    width: 300px;
-    height: 200px;
-  }
+.cardContainer {
+  perspective: 1000px;
+  width: 300px;
+  height: 550px;
+}
 
-  .containerCountry p {
-    font-size: 14px;
-    margin: 0;
-    text-align: justify
-  }
+.card {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
 
-  .Button {
-    margin-top: auto; /* "Толкает" кнопку вниз */
-    display: flex;
-    justify-content: center; /* Центрирует кнопку внутри обертки */
-  }
+.cardContainer:hover .card {
+  transform: rotateY(180deg);
+}
 
-  .interestedButton {
-    padding: 5px 10px; /* Внутренние отступы */
-    font-size: 1rem; /* Размер шрифта */
-    color: #fff; /* Цвет текста */
-    margin: 20px auto;
-    display: block; 
-    background-color: #93C572; /* Цвет фона кнопки */
-    border: none; /* Убираем стандартную границу */
-    border-radius: 12px; /* Скругленные углы */
-    cursor: pointer; /* Курсор при наведении */
-    transition: background-color 0.3s; /* Плавный переход цвета */
-  }
-  
-  .interestedButton:hover {
-    background-color: #678F4E; /* Цвет при наведении */
-  }
+.cardFront,
+.cardBack {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.cardFront {
+  /* position: relative; */
+  overflow: hidden;
+}
+
+.cardFront img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.cardFrontContent {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 15px;
+  background: rgba(149, 147, 147, 0.6);
+  color: white;
+}
+
+.cardFrontContent h4 {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  margin: 0 0 10px 0;
+  color: white;
+}
+
+/* .cardBack h4 {
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+} */
+
+.cardBackMonth {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 0 0 15px 0;
+}
+
+.cardBackP {
+  font-size: 16px;
+  margin: 0;
+}
+
+.descriptioncountry {
+  margin: 10px auto;
+}
+
+.cardBack {
+  transform: rotateY(180deg);
+  background: white;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.cardBack strong{
+  font-weight: bold;
+}
+
+.cardBackCity{
+  margin: 20px 0 10px 0;
+}
+
+.detailsButton {
+  display: inline-block;
+  margin-top: auto;
+  padding: 10px 20px;
+  background-color: #93C572;
+  color: white;
+  text-decoration: none;
+  border-radius: 12px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.detailsButton:hover {
+  background-color: #678F4E;
+}
