--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,7 +92,8 @@ body {
   color: var(--foreground);
   /* background: #F5F5DC; */
   background: #F5F5DC;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Dancing Script', cursive;
+  /* font-family: Arial, Helvetica, sans-serif; */
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
